# spl_group_project

./: .env  Cargo.toml  README.md
migrations/2023-11-04-234357_create_tracks/: down.sql  up.sql
resources/: db.sql  spotify-2023.csv
src/: data.rs  main.rs  models.rs  schema.rs  setup.rs  templates.rs
templates/: index.html  landing.html  questionnaire.html  random.html  results.html  topTen.html
