[package]
name = "spl_group"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.1.0", features = ["mysql"] }
dotenvy = "0.15"
rand = "0.8.5"
rocket = "=0.5.0-rc.4"
serde = { version = "1.0", features = ["derive"] }
mysql = "*"
csv="1.1"
